Set word-wrap to normal inside CodeMirror (fixes #13)

--- a/styles.less
+++ b/styles.less
@@ -38,6 +38,7 @@ form#dw__editform {
         margin-bottom: 7px;
         border: 1px solid #ccc;
         border-radius: 2px;
+        word-wrap: normal;
     }
 
     .CodeMirror pre {
